# sweet_engine

./: .gitgnore  .gitignore  CMakeLists.txt  README.md
doc/tutorial/: game_loop.md  open_window.md  sprite.md
src/engine/: CMakeLists.txt
src/engine/core/: CMakeLists.txt  application.cc  application.h  application_loop_info.h
src/sweet_engine/: CMakeLists.txt
src/sweet_engine/core/: CMakeLists.txt  application.cc  application.h  application_loop_info.h  game_loop.cc  game_loop.h  logger.cc  logger.h
src/sweet_engine/core/window/: window.cc  window.h  window_init_opts.h  window_size_state.h  window_visit_state.h
src/sweet_engine/graphics/: CMakeLists.txt  font.cc  font.h  font_family.cc  font_family.h  font_info.cc  font_info.h  font_render.cc  font_render.h  sprite.cc  sprite.h
src/sweet_engine/input/: CMakeLists.txt  keyboard.cc  keyboard.h
src/sweet_engine/scene/: CMakeLists.txt  scene_base.cc  scene_base.h  scene_manager.cc  scene_manager.h
src/sweet_engine/unit/: CMakeLists.txt  color.cc  color.h  point.cc  point.h  rectangle.cc  rectangle.h  size.cc  size.h
src/sweet_test/: CMakeLists.txt  font_test.cc  font_test.h  main.cc  main.h  sprite_test.cc  sprite_test.h
src/test/: CMakeLists.txt  main.cc
